@@ -1,7 +1,0 @@
-<?php 
-
-?>
-#simplesaml-no-linked-account-module-wrapper .elgg-module {
-	width: 48%;
-	min-height: 225px;
-}
