@@ -3,6 +3,7 @@
 x.x:
 
 - added: index widget to show only SAML logins
+- changed: layout of the no account linked page
 - fixed: SAML icon now loads correctly
 
 1.0 (2012-12-27):
